# home-assistant-cosmos

./: .env.sample  .gitignore  README.md  cosmos  env.example  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/cosmos/: __init__.py  actions.yaml  api_client.py  booking.py  cli.py  config.py  config_flow.py  const.py  exceptions.py  manifest.json  models.py  sensor.py  services.yaml  utils.py
custom_components/cosmos/translations/: de.json  en.json
tests/: __init__.py  conftest.py  test_api_client.py  test_booking.py  test_config.py  test_models.py  test_sensor.py  test_today_courses.py  test_today_upcoming_courses.py
